Fix lead container borders

--- a/templates/leads/components/lead_container.html
+++ b/templates/leads/components/lead_container.html
@@ -1,5 +1,5 @@
 <div class="bg-white dark:bg-gray-900 relative shadow-md sm:rounded-lg overflow-hidden" id="lead-container">
-    <div class="flex flex-col md:flex-row md:items-center md:justify-between space-y-3 md:space-y-0 md:space-x-4 p-4">
+    <div class="flex flex-col md:flex-row md:items-center md:justify-between space-y-3 md:space-y-0 md:space-x-4 p-4 border-b border-gray-200 dark:border-gray-700">
         <div class="flex-1 flex items-center space-x-2">
             <h5>
                 <span class="text-gray-500">All Leads:</span>
@@ -29,7 +29,7 @@
     </div>
 
     <div
-        class="flex flex-col md:flex-row items-stretch md:items-center md:space-x-3 space-y-3 md:space-y-0 justify-between mx-4 py-4 border-t dark:border-gray-700">
+        class="flex flex-col md:flex-row items-stretch md:items-center md:space-x-3 space-y-3 md:space-y-0 justify-between mx-4 py-4">
         <div class="w-full md:w-1/2">
             <form class="flex items-center">
                 <label for="simple-search" class="sr-only">Search</label>
