--- a/templates/leads/components/lead_items.html
+++ b/templates/leads/components/lead_items.html
@@ -24,7 +24,7 @@
         </thead>
         <tbody>
             {% for lead in leads %}
-            <tr class="border-b dark:border-gray-700">
+            <tr class="">
                 <td class="w-4 px-4 py-3">
                     <div class="flex items-center">
                         <input id="checkbox-{{ lead.id }}" name="selected_leads" value="{{ lead.id }}" type="checkbox"
