--- a/templates/dashboard/components/navigation/sidebar.html
+++ b/templates/dashboard/components/navigation/sidebar.html
@@ -70,10 +70,9 @@
 
             </li>
             <li>
-                <button type="button"
-                    class="flex items-center w-full p-2 text-base text-gray-900 transition duration-75 rounded-lg group hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700"
-                    aria-controls="dropdown-crud" data-collapse-toggle="dropdown-crud">
 
+                <a href="{% url 'hashtags:hashtags' %}"
+                    class="flex items-center w-full p-2 text-base text-gray-900 transition duration-75 rounded-lg group {% if request.resolver_match.url_name == 'hashtags' %}bg-gray-100 dark:bg-gray-700{% endif %} hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700">
                     <svg class="flex-shrink-0 w-6 h-6 {% if request.resolver_match.url_name == 'hashtags' %}text-green-500 dark:text-green-500{% else %}text-gray-500{% endif %} transition duration-75 group-hover:text-gray-900 dark:text-gray-400 dark:group-hover:text-white"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -83,10 +82,12 @@
                         <line x1="10" x2="8" y1="3" y2="21" />
                         <line x1="16" x2="14" y1="3" y2="21" />
                     </svg>
-                    <span class="flex-1 ml-3 text-left whitespace-nowrap" sidebar-toggle-item>Manage
-                        Hashtags</span>
 
-                </button>
+                    <span class="flex-1 ml-3 text-left whitespace-nowrap" sidebar-toggle-item>Manage Hashtags</span>
+
+                </a>
+
+
 
             </li>
             <li>
