--- a/templates/hashtags/hashtags.html
+++ b/templates/hashtags/hashtags.html
@@ -9,7 +9,7 @@
 
     <div id="main-content" class="relative w-full h-full overflow-y-auto lg:ml-64">
         <main>
-            <div class="px-4 pt-6">
+            <div class="px-4 pt-6" id="hashtag-container">
                 <div class="flex flex-col md:flex-row justify-between items-start gap-4 md:items-center">
                     <div>
                         <h1 class="text-3xl font-bold dark:text-gray-200">Hashtags</h1>
@@ -23,7 +23,8 @@
 
 
                         <div class="flex flex-col sm:flex-row gap-2 w-full md:w-auto">
-                            <button type="button"
+                            <button type="button" data-modal-target="addHashtagModal"
+                                data-modal-toggle="addHashtagModal"
                                 class="w-full sm:w-auto text-white bg-green-600 hover:bg-green-700 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center justify-center dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">
                                 <svg class="w-4 h-4 text-white dark:text-white me-2" aria-hidden="true"
                                     xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
@@ -160,9 +161,9 @@
                                             d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" />
                                     </svg>
                                 </div>
-                                <input type="text" hx-get="{% url 'leads:search_leads' %}"
-                                    hx-trigger="input changed delay:100ms, search" hx-target="#hashtag-listing"
-                                    id="lead-search-input" placeholder="Search Hashtags" name="search"
+                                <input type="text" hx-get="{% url 'hashtags:search_hashtags' %}"
+                                    hx-trigger="input changed delay:100ms, search" hx-target="#hashtag-list"
+                                    id="hashtag-search-input" placeholder="Search Hashtags" name="search"
                                     value="{{ search_query }}"
                                     class="bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-green-500 focus:border-green-500 block w-full pl-10 p-2 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-green-500 dark:focus:border-green-500">
                             </div>
@@ -226,68 +227,11 @@
                     </div>
                 </div>
 
-                <div class="mb-4 mt-4 grid gap-4 sm:grid-cols-2 md:mb-8 lg:grid-cols-3 xl:grid-cols-4">
-                    <div
-                        class="block w-full p-6 bg-white border border-gray-200 rounded-lg shadow-sm hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
-                        <div class="flex justify-between items-start mb-2">
-                            <div class="flex items-center">
-                                <span
-                                    class="bg-purple-100 text-purple-800 text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded-sm dark:bg-gray-700 dark:text-blue-400 border border-purple-400">
-
-                                    <svg class="w-4 h-4 me-1.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                                        width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                        <path fill="currentColor" fill-rule="evenodd"
-                                            d="M3 8a5 5 0 0 1 5-5h8a5 5 0 0 1 5 5v8a5 5 0 0 1-5 5H8a5 5 0 0 1-5-5V8Zm5-3a3 3 0 0 0-3 3v8a3 3 0 0 0 3 3h8a3 3 0 0 0 3-3V8a3 3 0 0 0-3-3H8Zm7.597 2.214a1 1 0 0 1 1-1h.01a1 1 0 1 1 0 2h-.01a1 1 0 0 1-1-1ZM12 9a3 3 0 1 0 0 6 3 3 0 0 0 0-6Zm-5 3a5 5 0 1 1 10 0 5 5 0 0 1-10 0Z"
-                                            clip-rule="evenodd" />
-                                    </svg>
-                                    Instagram
-                                </span>
-                            </div>
-                            <button id="dropdownButton" data-dropdown-toggle="dropdown"
-                                class="inline-block text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:ring-4 focus:outline-none focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-1.5"
-                                type="button">
-                                <span class="sr-only">Open dropdown</span>
-                                <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                                    fill="currentColor" viewBox="0 0 16 3">
-                                    <path
-                                        d="M2 0a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3Zm6.041 0a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM14 0a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3Z" />
-                                </svg>
-                            </button>
-                        </div>
-
-                        <h3 class="text-xl font-bold text-gray-900 dark:text-white mb-4">#HouseHunting</h3>
-
-                        <div class="grid grid-cols-2 gap-4">
-                            <div>
-                                <p class="text-sm text-gray-500 mb-1">Leads Generated</p>
-                                <p class="text-xl font-bold text-gray-900 dark:text-white">145</p>
-                            </div>
-                            <div>
-                                <p class="text-sm text-gray-500 mb-1">Impressions</p>
-                                <p class="text-xl font-bold text-gray-900 dark:text-white">2,300</p>
-                            </div>
-                        </div>
-                        <div
-                            class="flex items-center justify-between mt-4 pt-4 border-t border-gray-200 dark:border-gray-700">
-                            <div class="flex items-center">
-
-                                <svg class="w-4 h-4 text-gray-500 mr-1" aria-hidden="true"
-                                    xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
-                                    viewBox="0 0 24 24">
-                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                                        stroke-width="2"
-                                        d="M4 10h16m-8-3V4M7 7V4m10 3V4M5 20h14a1 1 0 0 0 1-1V7a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1Zm3-7h.01v.01H8V13Zm4 0h.01v.01H12V13Zm4 0h.01v.01H16V13Zm-8 4h.01v.01H8V17Zm4 0h.01v.01H12V17Zm4 0h.01v.01H16V17Z" />
-                                </svg>
-
-                                <span class="text-sm text-gray-500">Added Mar 1, 2025</span>
-                            </div>
-                            <div class="flex items-center">
-                                <span class="flex h-2 w-2 rounded-full bg-green-500 mr-2"></span>
-                                <span class="text-sm text-gray-500">Active</span>
-                            </div>
-                        </div>
+                <div id="hashtag-list">
+                    <div>
 
                     </div>
+                    {% include 'hashtags/components/hashtag_items.html'%}
                 </div>
 
             </div>
@@ -356,9 +300,7 @@
 
 </div>
 
-{% include 'leads/components/drawers/read_drawer.html' %}
-{% include 'leads/components/drawers/delete_modal.html' %}
-{% include 'leads/components/drawers/edit_lead_drawer.html' %}
+{% include 'hashtags/components/modals/add_hashtag.html' %}
 
 <div id="filterDropdown" class="z-20 hidden px-3 pt-1 bg-white rounded-lg shadow w-90 dark:bg-gray-700 right-0">
     <div class="flex items-center justify-between pt-2 mb-2">
@@ -556,4 +498,6 @@
         </form>
     </div>
 </div>
+
+
 {% endblock %}
