--- a/templates/hashtags/components/hashtag_items.html
+++ b/templates/hashtags/components/hashtag_items.html
@@ -45,7 +45,9 @@
                             class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Edit</a>
                     </li>
                     <li>
-                        <a href="#"
+                        <a hx-post="{% url 'hashtags:delete_hashtag' hashtag.id %}" hx-target="#hashtag-list"
+                            hx-confirm="Are you sure you want to delete this hashtag?"
+                            hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
                             class="block px-4 py-2 text-sm text-red-600 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Delete</a>
                     </li>
                 </ul>
@@ -172,20 +174,30 @@
 </div>
 {% else %}
 <div id="alert-additional-content-5"
-    class="p-4 mb-4 m-4 text-green-800 border border-green-300 rounded-lg bg-green-50 dark:border-gray-600 dark:bg-gray-800"
-    role="alert">
+    class="p-4 border border-gray-300 rounded-lg bg-gray-50 dark:border-gray-600 dark:bg-gray-800" role="alert">
     <div class="flex items-center">
-        <svg class="flex-shrink-0 w-4 h-4 me-2 dark:text-gray-300" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+        <svg class="shrink-0 w-4 h-4 me-2 dark:text-gray-300" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
             fill="currentColor" viewBox="0 0 20 20">
             <path
                 d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z" />
         </svg>
-        <h3 class="text-lg font-medium text-gray-800 dark:text-gray-300">No Leads Found</h3>
+        <span class="sr-only">Info</span>
+        <h3 class="text-lg font-medium text-gray-800 dark:text-gray-300">No Hashtags</h3>
     </div>
     <div class="mt-2 mb-4 text-sm text-gray-800 dark:text-gray-300">
-        You haven't added any leads yet. Click the button below to add your first lead.
+        You haven't added any Hashtags yet. Click the button below to add your first Hashtag.
     </div>
-
+    <div class="flex">
+        <button type="button" data-modal-target="addHashtagModal" data-modal-toggle="addHashtagModal"
+            class="text-white bg-gray-700 hover:bg-gray-800 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-xs px-3 py-1.5 me-2 text-center inline-flex items-center dark:bg-gray-600 dark:hover:bg-gray-500 dark:focus:ring-gray-800">
+            <svg class="me-2 h-3 w-3 dark:text-gray-300" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                fill="currentColor" viewBox="0 0 20 14">
+                <path
+                    d="M10 0C4.612 0 0 5.336 0 7c0 1.742 3.546 7 10 7 6.454 0 10-5.258 10-7 0-1.664-4.612-7-10-7Zm0 10a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z" />
+            </svg>
+            Add Hashtag
+        </button>
+    </div>
 </div>
 {% endif %}
 {% endif %}
