--- a/templates/hashtags/components/hashtag_items.html
+++ b/templates/hashtags/components/hashtag_items.html
@@ -87,21 +87,21 @@
     {% endfor %}
 </div>
 
-{% if leads.has_other_pages %}
+{% if hashtags.has_other_pages %}
 <nav class="flex flex-col items-start justify-between p-4 space-y-3 md:flex-row md:items-center md:space-y-0"
     aria-label="Table navigation">
     <span class="text-sm font-normal text-gray-500 dark:text-gray-400">
         Showing
         <span class="font-semibold text-gray-900 dark:text-white">
-            {{ leads.start_index }}-{{ leads.end_index }}</span>
+            {{ hashtags.start_index }}-{{ hashtags.end_index }}</span>
         of
         <span class="font-semibold text-gray-900 dark:text-white">
-            {{ leads.paginator.count }}</span>
+            {{ hashtags.paginator.count }}</span>
     </span>
     <ul class="inline-flex items-stretch -space-x-px">
-        {% if leads.has_previous %}
+        {% if hashtags.has_previous %}
         <li>
-            <a href="?page={{ leads.previous_page_number }}"
+            <a href="?page={{ hashtags.previous_page_number }}"
                 class="flex items-center justify-center h-full py-1.5 px-3 ml-0 text-gray-500 bg-white rounded-l-lg border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
                 <span class="sr-only">Previous</span>
                 <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewbox="0 0 20 20"
@@ -114,8 +114,8 @@
         </li>
         {% endif %}
 
-        {% for i in leads.paginator.page_range %}
-        {% if leads.number == i %}
+        {% for i in hashtags.paginator.page_range %}
+        {% if hashtags.number == i %}
         <li>
             <a href="#" aria-current="page"
                 class="z-10 flex items-center justify-center px-3 py-2 text-sm leading-tight border text-primary-600 bg-primary-50 border-primary-300 hover:bg-primary-100 hover:text-primary-700 dark:border-gray-700 dark:bg-gray-700 dark:text-white">
@@ -130,9 +130,9 @@
         {% endif %}
         {% endfor %}
 
-        {% if leads.has_next %}
+        {% if hashtags.has_next %}
         <li>
-            <a href="?page={{ leads.next_page_number }}"
+            <a href="?page={{ hashtags.next_page_number }}"
                 class="flex items-center justify-center h-full py-1.5 px-3 leading-tight text-gray-500 bg-white rounded-r-lg border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
                 <span class="sr-only">Next</span>
                 <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewbox="0 0 20 20"
