--- a/templates/hashtags/components/hashtag_items.html
+++ b/templates/hashtags/components/hashtag_items.html
@@ -101,7 +101,7 @@
     <ul class="inline-flex items-stretch -space-x-px">
         {% if hashtags.has_previous %}
         <li>
-            <a href="?page={{ hashtags.previous_page_number }}"
+            <a hx-get="?page={{ hashtags.previous_page_number }}" hx-target="#hashtag-list" hx-select="#hashtag-list"
                 class="flex items-center justify-center h-full py-1.5 px-3 ml-0 text-gray-500 bg-white rounded-l-lg border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
                 <span class="sr-only">Previous</span>
                 <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewbox="0 0 20 20"
@@ -117,13 +117,13 @@
         {% for i in hashtags.paginator.page_range %}
         {% if hashtags.number == i %}
         <li>
-            <a href="#" aria-current="page"
+            <a aria-current="page"
                 class="z-10 flex items-center justify-center px-3 py-2 text-sm leading-tight border text-primary-600 bg-primary-50 border-primary-300 hover:bg-primary-100 hover:text-primary-700 dark:border-gray-700 dark:bg-gray-700 dark:text-white">
                 {{ i }}</a>
         </li>
         {% else %}
         <li>
-            <a href="?page={{ i }}"
+            <a hx-get="?page={{ i }}" hx-target="#hashtag-list" hx-select="#hashtag-list"
                 class="flex items-center justify-center px-3 py-2 text-sm leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
                 {{ i }}</a>
         </li>
@@ -132,7 +132,7 @@
 
         {% if hashtags.has_next %}
         <li>
-            <a href="?page={{ hashtags.next_page_number }}"
+            <a hx-get="?page={{ hashtags.next_page_number }}" hx-target="#hashtag-list" hx-select="#hashtag-list"
                 class="flex items-center justify-center h-full py-1.5 px-3 leading-tight text-gray-500 bg-white rounded-r-lg border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
                 <span class="sr-only">Next</span>
                 <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewbox="0 0 20 20"
