--- a/templates/hashtags/components/modals/add_hashtag.html
+++ b/templates/hashtags/components/modals/add_hashtag.html
@@ -38,8 +38,8 @@
                         <select id="platform" name="platform"
                             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500">
                             <option selected="">Select platform</option>
-                            {% for value, label in platform_choices %}
-                            <option value="{{ value }}">{{ label }}</option>
+                            {% for platform in platforms %}
+                            <option value="{{ platform.id }}">{{ platform.name }}</option>
                             {% endfor %}
                         </select>
                     </div>
