--- a/templates/leads/components/lead_items.html
+++ b/templates/leads/components/lead_items.html
@@ -43,7 +43,7 @@
                 <td class="px-4 py-3">
                     <span
                         class="inline-flex items-center border border-gray-200 text-grey-900 text-xs font-medium px-2.5 py-0.5 rounded dark:bg-gray-800 dark:text-white dark:border-gray-600">
-                        {{ lead.source|title }}
+                        {{ lead.source }}
                     </span>
                 </td>
 
