--- a/templates/leads/leads.html
+++ b/templates/leads/leads.html
@@ -141,14 +141,14 @@
             <div id="source-body" class="hidden" aria-labelledby="source-heading">
                 <div class="py-2 font-light border-b border-gray-200 dark:border-gray-600">
                     <ul class="space-y-2">
-                        {% for value, label in platform_choices %}
+                        {% for platform in platforms %}
                         <li class="flex items-center">
-                            <input id="platform-{{ value }}" name="source" type="checkbox" value="{{ value }}"
+                            <input id="platform-{{ platform.id }}" name="source" type="checkbox" value="{{ platform.id }}"
                                 class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-green-600 focus:ring-green-500 dark:focus:ring-green-600 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500">
-                            <label for="platform-{{ value }}"
+                            <label for="platform-{{ platform.id }}"
                                 class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">
-                                {{ label }}
-                                {% with count=leads|filter_by_platform:value|length %}
+                                {{ platform.name }}
+                                {% with count=leads|filter_by_platform:platform.id|length %}
                                 ({{ count }})
                                 {% endwith %}
                             </label>
