--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,8 @@
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
     <!-- <link rel="stylesheet" href="https://flowbite-admin-dashboard.vercel.app//app.css"> -->
 
-    
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+   
 
 </head>
 
@@ -21,6 +22,7 @@
     {% block content %}
     {% endblock content %}
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
+    <script src="{% static 'js/auth.js' %}"></script>
 </body>
 
 </html>
