--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -84,7 +84,7 @@
                     Create your Free Account
                 </h1>
                 <div class="items-center space-y-3 sm:space-x-4 sm:space-y-0 sm:flex">
-                    <a href="{% provider_login_url 'google' process='signup' %}"
+                    <a href=""
                         class="w-full inline-flex items-center justify-center py-2.5 px-5 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-gray-900 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
                         <svg class="w-5 h-5 mr-2" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g clip-path="url(#clip0_13183_10121)">
@@ -125,17 +125,24 @@
                     <div class="px-5 text-center text-gray-500 dark:text-gray-400">or</div>
                     <div class="w-full h-0.5 bg-gray-200 dark:bg-gray-700"></div>
                 </div>
-                <form class="space-y-4 lg:space-y-6" action="{% url 'account_signup' %}" method="post">
+                <form class="space-y-4 lg:space-y-6" id="signup-form" action="{% url 'account_signup' %}" method="post">
                     {% csrf_token %}
-                    <div id="danger-alert" class="flex items-center p-4 mb-4 text-sm text-red-800 border border-red-300 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400 dark:border-red-800" role="alert">
-                        <svg class="shrink-0 inline w-4 h-4 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-                          <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
+                    {% if form.errors %}
+                    <div id="danger-alert"
+                        class="flex items-center p-4 mb-4 text-sm text-red-800 border border-red-300 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400 dark:border-red-800"
+                        role="alert">
+                        <svg class="shrink-0 inline w-4 h-4 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                            fill="currentColor" viewBox="0 0 20 20">
+                            <path
+                                d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z" />
                         </svg>
                         <span class="sr-only">Info</span>
                         <div>
-                          <span class="font-medium">Danger alert!</span> Change a few things up and try submitting again.
+                            <span class="font-medium">Danger!</span> Fix the errors.
                         </div>
-                      </div>
+                    </div>
+                    {% endif %}
+
                     <div>
                         <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your
                             name</label>
@@ -143,40 +150,47 @@
                             class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-green-500 focus:border-green-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                             placeholder="John Doe" required="">
                     </div>
-                    <div>
+                    <div id="email-field">
                         <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your
                             email</label>
-                        <input type="email" name="email" id="email"
-                            class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-green-500 focus:border-green-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                            placeholder="name@company.com" required="">
-                            <p class="mt-2 text-sm text-red-600 dark:text-red-500"><span class="font-medium">Oh, snapp!</span> Some error message.</p>
-                     
+                        <input type="email" name="email" id="email" placeholder="name@company.com"
+                            hx-post="{% url 'accounts:validate_email' %}" hx-trigger="blur, keyup[key=='Enter']"
+                            hx-target="#email-field" hx-select="#email-field" hx-swap="outerHTML"
+                            class="bg-gray-50 border {% if email_exists %}border-red-500{% else %}border-gray-300{% endif %} text-gray-900 sm:text-sm rounded-lg focus:ring-green-500 focus:border-green-600 block w-full p-2.5"
+                            required>
                     </div>
 
-                    <div>
-                        <label for="error" class="block mb-2 text-sm font-medium text-red-700 dark:text-red-500">Your email</label>
-                        <input type="text" id="error" class="bg-red-50 border border-red-500 text-red-900 placeholder-red-700 text-sm rounded-lg focus:ring-red-500 dark:bg-gray-700 focus:border-red-500 block w-full p-2.5 dark:text-red-500 dark:placeholder-red-500 dark:border-red-500" placeholder="Error input">
-                        <p class="mt-2 text-sm text-red-600 dark:text-red-500"><span class="font-medium">Oh, snapp!</span> Some error message.</p>
-                      </div>
 
-                    <div>
+
+                    <div id="password-field">
                         <label for="password"
                             class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Password</label>
-                           
-                            <div class="relative">
-                                <input type="password" name="password1" id="password1" placeholder="••••••••"
-                                    class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-green-500 focus:border-green-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                                    required="">
-                                <button type="button" class="absolute inset-y-0 me-2 right-0 flex items-center pr-3" onclick="togglePasswordVisibility()">
-                                    <svg id="eye-icon" class="w-5 h-5 text-gray-500 dark:text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.268-2.943-9.543-7a9.97 9.97 0 011.563-3.029m5.858.908a3 3 0 114.243 4.243M9.878 9.878l4.242 4.242M9.88 9.88l-3.29-3.29m7.532 7.532l3.29 3.29M3 3l3.59 3.59m0 0A9.953 9.953 0 0112 5c4.478 0 8.268 2.943 9.543 7a10.025 10.025 0 01-4.132 5.411m0 0L21 21"></path>
-                                    </svg>
-                                </button>
-                            </div>
-                         
-                        
+
+                        <div class="relative">
+                            <input type="password" name="password1" id="password1" placeholder="••••••••"
+                                hx-post="{% url 'accounts:validate_password' %}"
+                                hx-trigger="click keyup changed delay:500ms" hx-target="#password-validation"
+                                class="bg-gray-50 border {% if password_errors %}border-red-500{% else %}border-gray-300{% endif %} text-gray-900 sm:text-sm rounded-lg focus:ring-green-500 focus:border-green-600 block w-full p-2.5"
+                                required="">
+                            <button type="button" class="absolute inset-y-0 me-2 right-0 flex items-center pr-3"
+                                onclick="togglePasswordVisibility()">
+                                <svg id="eye-icon" class="w-5 h-5 text-gray-500 dark:text-gray-400" fill="none"
+                                    stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.268-2.943-9.543-7a9.97 9.97 0 011.563-3.029m5.858.908a3 3 0 114.243 4.243M9.878 9.878l4.242 4.242M9.88 9.88l-3.29-3.29m7.532 7.532l3.29 3.29M3 3l3.59 3.59m0 0A9.953 9.953 0 0112 5c4.478 0 8.268 2.943 9.543 7a10.025 10.025 0 01-4.132 5.411m0 0L21 21">
+                                    </path>
+                                </svg>
+                            </button>
+                        </div>
+
+                        <div id="password-validation" class="mt-2">
+                            {% include 'account/components/alerts.html' %}
+                        </div>
                     </div>
-                    {% include 'account/components/alerts.html' %}
+
+
+
+
                     <div class="flex items-start">
                         <div class="flex items-center h-5">
 
