--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,8 @@
     <!-- <link rel="stylesheet" href="https://flowbite-admin-dashboard.vercel.app//app.css"> -->
 
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
-   
+    <script src="{% static 'js/htmx.js' %}"></script>
+
 
 </head>
 
