Toggle password visibility on login page

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -137,9 +137,21 @@
                     <div>
                         <label for="password"
                             class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Password</label>
-                        <input type="password" name="password" id="password" placeholder="••••••••"
-                            class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-green-500 focus:border-green-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-green-500 dark:focus:border-green-500"
-                            required="">
+
+                        <div class="relative">
+                            <input type="password" name="password" id="password" placeholder="••••••••"
+                                class="bg-gray-50 border {% if password_errors %}border-red-500{% else %}border-gray-300{% endif %} text-gray-900 sm:text-sm rounded-lg focus:ring-green-500 focus:border-green-600 block w-full p-2.5"
+                                required="">
+                            <button type="button" class="absolute inset-y-0 me-2 right-0 flex items-center pr-3"
+                                onclick="togglePasswordVisibility()">
+                                <svg id="eye-icon" class="w-5 h-5 text-gray-500 dark:text-gray-400" fill="none"
+                                    stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.268-2.943-9.543-7a9.97 9.97 0 011.563-3.029m5.858.908a3 3 0 114.243 4.243M9.878 9.878l4.242 4.242M9.88 9.88l-3.29-3.29m7.532 7.532l3.29 3.29M3 3l3.59 3.59m0 0A9.953 9.953 0 0112 5c4.478 0 8.268 2.943 9.543 7a10.025 10.025 0 01-4.132 5.411m0 0L21 21">
+                                    </path>
+                                </svg>
+                            </button>
+                        </div>
                     </div>
                     <div class="flex items-center justify-between">
                         <div class="flex items-start">
@@ -170,4 +182,5 @@
         </div>
     </div>
 </section>
+
 {% endblock content %}
