--- a/templates/targets/components/target_items.html
+++ b/templates/targets/components/target_items.html
@@ -2,9 +2,15 @@
 <div class="mb-4 mt-4 grid gap-4 sm:grid-cols-2 md:mb-8 lg:grid-cols-3 xl:grid-cols-4">
     {% for target in targets %}
     <div
-        class="block w-full p-6 bg-white border border-gray-200 rounded-lg shadow-sm hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+        class="block w-full p-6 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 transition-all duration-300 hover:shadow-lg hover:scale-[1.02]">
+        <div class="flex mb-4">
+            <input type="checkbox"
+                class="w-4 h-4 text-primary-600 bg-gray-100 border-gray-300 rounded focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+        </div>
         <div class="flex justify-between items-start mb-2">
+
             <div class="flex items-center">
+
                 <span
                     class="{% if target.platform.name|lower == 'facebook' %}bg-blue-100 text-blue-800 border-blue-400{% elif target.platform.name|lower == 'instagram' %}bg-purple-100 text-purple-800 border-purple-400{% endif %} text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded-sm dark:bg-gray-700 dark:text-blue-400 border">
                     {% if target.platform.name|lower == 'facebook' %}
@@ -25,7 +31,7 @@
                     {{ target.platform.name|title }}
                 </span>
             </div>
-            <button id="dropdownButton" data-dropdown-toggle="dropdown-{{ target.id }}"
+            <button id="dropdownButton-{{ target.id }}" data-dropdown-toggle="dropdown-{{ target.id }}"
                 class="inline-block text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:ring-4 focus:outline-none focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-1.5"
                 type="button">
                 <span class="sr-only">Open dropdown</span>
@@ -37,14 +43,14 @@
             </button>
             <div id="dropdown-{{ target.id }}"
                 class="z-10 hidden text-base list-none bg-white divide-y divide-gray-100 rounded-lg shadow-sm w-44 dark:bg-gray-700">
-                <ul class="py-2" aria-labelledby="dropdownButton">
+                <ul class="py-2" aria-labelledby="dropdownButton-{{ target.id }}">
                     <li>
                         <a href="#"
                             class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Edit</a>
                     </li>
                     <li>
                         <a hx-post="{% url 'targets:delete_target' target.id %}" hx-target="#targets-list"
-                            hx-confirm="Are you sure you want to delete this hashtag?"
+                            hx-confirm="Are you sure you want to delete this target?"
                             hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
                             class="block px-4 py-2 text-sm text-red-600 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Delete</a>
                     </li>
@@ -85,8 +91,8 @@
             </div>
             <div>
                 <p class="text-sm text-gray-500 mb-1 flex items-center">
-                    <svg class="w-4 h-4 mr-1 mt-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                        fill="currentColor" viewBox="0 0 24 24">
+                    <svg class="w-4 h-4 mr-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+                        viewBox="0 0 24 24">
                         <path
                             d="M10 0C4.612 0 0 5.336 0 7c0 1.742 3.546 7 10 7 6.454 0 10-5.258 10-7 0-1.664-4.612-7-10-7Zm0 10a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z" />
                     </svg>
@@ -98,13 +104,11 @@
 
         <div class="flex items-center justify-between mt-4 pt-4 border-t border-gray-200 dark:border-gray-700">
             <div class="flex items-center">
-
                 <svg class="w-4 h-4 text-gray-500 mr-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
                     height="24" fill="none" viewBox="0 0 24 24">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M4 10h16m-8-3V4M7 7V4m10 3V4M5 20h14a1 1 0 0 0 1-1V7a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1Zm3-7h.01v.01H8V13Zm4 0h.01v.01H12V13Zm4 0h.01v.01H16V13Zm-8 4h.01v.01H8V17Zm4 0h.01v.01H12V17Zm4 0h.01v.01H16V17Z" />
                 </svg>
-
                 <span class="text-sm text-gray-500">Added {{ target.created_at|date:"M d, Y" }}</span>
             </div>
             <div class="flex items-center">
@@ -112,7 +116,6 @@
                 <span class="text-sm text-gray-500">Active</span>
             </div>
         </div>
-
     </div>
     {% endfor %}
 </div>
@@ -122,19 +125,18 @@
     aria-label="Table navigation">
     <span class="text-sm font-normal text-gray-500 dark:text-gray-400">
         Showing
-        <span class="font-semibold text-gray-900 dark:text-white">
-            {{ targets.start_index }}-{{ targets.end_index }}</span>
+        <span class="font-semibold text-gray-900 dark:text-white">{{ targets.start_index }}-{{ targets.end_index
+            }}</span>
         of
-        <span class="font-semibold text-gray-900 dark:text-white">
-            {{ targets.paginator.count }}</span>
+        <span class="font-semibold text-gray-900 dark:text-white">{{ targets.paginator.count }}</span>
     </span>
     <ul class="inline-flex items-stretch -space-x-px">
         {% if targets.has_previous %}
         <li>
-            <a hx-get="?page={{ targets.previous_page_number }}" hx-target="#target-list" hx-select="#target-list"
+            <a hx-get="?page={{ targets.previous_page_number }}" hx-target="#targets-list" hx-select="#targets-list"
                 class="flex items-center justify-center h-full py-1.5 px-3 ml-0 text-gray-500 bg-white rounded-l-lg border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
                 <span class="sr-only">Previous</span>
-                <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewbox="0 0 20 20"
+                <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
                     xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd"
                         d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z"
@@ -153,7 +155,7 @@
         </li>
         {% else %}
         <li>
-            <a hx-get="?page={{ i }}" hx-target="#target-list" hx-select="#target-list"
+            <a hx-get="?page={{ i }}" hx-target="#targets-list" hx-select="#targets-list"
                 class="flex items-center justify-center px-3 py-2 text-sm leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
                 {{ i }}</a>
         </li>
@@ -162,10 +164,10 @@
 
         {% if targets.has_next %}
         <li>
-            <a hx-get="?page={{ targets.next_page_number }}" hx-target="#target-list" hx-select="#target-list"
+            <a hx-get="?page={{ targets.next_page_number }}" hx-target="#targets-list" hx-select="#targets-list"
                 class="flex items-center justify-center h-full py-1.5 px-3 leading-tight text-gray-500 bg-white rounded-r-lg border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
                 <span class="sr-only">Next</span>
-                <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewbox="0 0 20 20"
+                <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
                     xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd"
                         d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
@@ -191,8 +193,8 @@
         <h3 class="text-lg font-medium">No results found</h3>
     </div>
     <div class="mt-2 mb-4 text-sm">
-        No leads match your search term "{{ search_query }}". Try adjusting your search or clear it to see all
-        leads.
+        No targets match your search term "{{ search_query }}". Try adjusting your search or clear it to see all
+        targets.
     </div>
     <div class="flex">
         <button type="button" hx-get="{% url 'targets:search_targets' %}?search=" hx-target="#targets-list"
@@ -212,21 +214,32 @@
                 d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z" />
         </svg>
         <span class="sr-only">Info</span>
-        <h3 class="text-lg font-medium text-gray-800 dark:text-gray-300">No Targets</h3>
+        <h3 class="text-lg font-medium text-gray-800 dark:text-gray-300">No Targets Found</h3>
     </div>
     <div class="mt-2 mb-4 text-sm text-gray-800 dark:text-gray-300">
+        {% if active_filters %}
+        No targets match your selected filters. Try adjusting your filters or clear them to see all targets.
+        <div class="flex mt-4">
+            <button type="button" hx-get="{% url 'targets:filter_targets' %}" hx-target="#targets-list"
+                onclick="clearAllFilters()"
+                class="text-gray-800 bg-transparent border border-gray-800 hover:bg-gray-900 hover:text-white focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-xs px-3 py-1.5 text-center dark:border-gray-600 dark:hover:bg-gray-600 dark:focus:ring-gray-800 dark:text-gray-300 dark:hover:text-white">
+                Clear Filters
+            </button>
+        </div>
+        {% else %}
         You haven't added any targets yet. Click the button below to add your first target.
-    </div>
-    <div class="flex">
-        <button type="button" data-modal-target="addHashtagModal" data-modal-toggle="addHashtagModal"
-            class="text-white bg-gray-700 hover:bg-gray-800 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-xs px-3 py-1.5 me-2 text-center inline-flex items-center dark:bg-gray-600 dark:hover:bg-gray-500 dark:focus:ring-gray-800">
-            <svg class="me-2 h-3 w-3 dark:text-gray-300" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                fill="currentColor" viewBox="0 0 20 14">
-                <path
-                    d="M10 0C4.612 0 0 5.336 0 7c0 1.742 3.546 7 10 7 6.454 0 10-5.258 10-7 0-1.664-4.612-7-10-7Zm0 10a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z" />
-            </svg>
-            Add Hashtag
-        </button>
+        <div class="flex mt-4">
+            <button type="button" data-modal-target="addTargetModal" data-modal-toggle="addTargetModal"
+                class="text-white bg-gray-700 hover:bg-gray-800 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-xs px-3 py-1.5 me-2 text-center inline-flex items-center dark:bg-gray-600 dark:hover:bg-gray-500 dark:focus:ring-gray-800">
+                <svg class="me-2 h-3 w-3 dark:text-gray-300" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                    fill="currentColor" viewBox="0 0 20 14">
+                    <path
+                        d="M10 0C4.612 0 0 5.336 0 7c0 1.742 3.546 7 10 7 6.454 0 10-5.258 10-7 0-1.664-4.612-7-10-7Zm0 10a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z" />
+                </svg>
+                Add Target
+            </button>
+        </div>
+        {% endif %}
     </div>
 </div>
 {% endif %}
