--- a/templates/hashtags/components/hashtag_items.html
+++ b/templates/hashtags/components/hashtag_items.html
@@ -2,7 +2,7 @@
 <div class="mb-4 mt-4 grid gap-4 sm:grid-cols-2 md:mb-8 lg:grid-cols-3 xl:grid-cols-4">
     {% for hashtag in hashtags %}
     <div
-        class="block w-full p-6 bg-white border border-gray-200 rounded-lg shadow-sm hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+        class="block w-full p-6 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 transition-all duration-300 hover:shadow-lg hover:scale-[1.02]">
         <div class="flex justify-between items-start mb-2">
             <div class="flex items-center">
                 <span
