--- a/templates/targets/components/target_items.html
+++ b/templates/targets/components/target_items.html
@@ -4,7 +4,7 @@
     <div
         class="block w-full p-6 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 transition-all duration-300 hover:shadow-lg hover:scale-[1.02]">
         <div class="flex mb-4">
-            <input type="checkbox"
+            <input id="checkbox-{{ target.id }}" name="selected_targets" value="{{ target.id }}" type="checkbox"
                 class="w-4 h-4 text-green-600 bg-gray-100 border-gray-300 rounded focus:ring-green-500 dark:focus:ring-green-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
         </div>
         <div class="flex justify-between items-start mb-2">
