--- a/templates/leads/leads.html
+++ b/templates/leads/leads.html
@@ -18,6 +18,16 @@
                     </div>
 
                     <div class="flex flex-col sm:flex-row gap-2 w-full md:w-auto">
+                        <button type="button" data-modal-target="requestLeadModal" data-modal-toggle="requestLeadModal"
+                            class="w-full sm:w-auto text-white bg-green-600 hover:bg-green-700 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center justify-center dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">
+                            <svg class="w-4 h-4 text-white dark:text-white me-2" aria-hidden="true"
+                                xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
+                                viewBox="0 0 24 24">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                    stroke-width="2" d="M5 12h14m-7 7V5"></path>
+                            </svg>
+                            Request New Leads
+                        </button>
 
 
                         <div class="flex flex-col sm:flex-row gap-2 w-full sm:w-auto">
@@ -105,7 +115,7 @@
     </div>
 
 </div>
-
+{% include 'leads/components/drawers/request_lead.html' %}
 {% include 'leads/components/drawers/read_drawer.html' %}
 {% include 'leads/components/drawers/delete_modal.html' %}
 {% include 'leads/components/drawers/edit_lead_drawer.html' %}
@@ -143,7 +153,8 @@
                     <ul class="space-y-2">
                         {% for platform in platforms %}
                         <li class="flex items-center">
-                            <input id="platform-{{ platform.id }}" name="source" type="checkbox" value="{{ platform.id }}"
+                            <input id="platform-{{ platform.id }}" name="source" type="checkbox"
+                                value="{{ platform.id }}"
                                 class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-green-600 focus:ring-green-500 dark:focus:ring-green-600 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500">
                             <label for="platform-{{ platform.id }}"
                                 class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">
