--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -10,8 +10,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>HabitatHunt</title>
 
-    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+
     <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
+
+
+
+
+
+    <link rel="stylesheet" href="{% static 'css/output.css' %}">
+
+
+
     <script src="{% static 'js/htmx.js' %}"></script>
 
     <script>
@@ -221,9 +230,11 @@
         }
 
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.8.1/nouislider.min.js"
-        integrity="sha512-g/feAizmeiVKSwvfW0Xk3ZHZqv5Zs8PEXEBKzL15pM0SevEvoX8eJ4yFWbqakvRj7vtw1Q97bLzEpG2IVWX0Mg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <script src="{% static 'js/preline.js' %}"></script>
+
+
+
 </body>
 
 </html>
