Major work on request lead logic

--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -14,12 +14,7 @@
     <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
 
 
-
-
-
-    <link rel="stylesheet" href="{% static 'css/output.css' %}">
-
-
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
     <script src="{% static 'js/htmx.js' %}"></script>
 
