--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -543,6 +543,9 @@
         </p>
 
     </div>
-
+    {% include 'leads/components/drawers/request_lead.html' %}
+    {% include 'leads/components/drawers/read_drawer.html' %}
+    {% include 'leads/components/drawers/delete_modal.html' %}
+    {% include 'leads/components/drawers/edit_lead_drawer.html' %}
 </div>
 {% endblock %}
