--- a/templates/targets/targets.html
+++ b/templates/targets/targets.html
@@ -45,7 +45,7 @@
                                     </svg>
                                     Import
                                 </button> -->
-                                <a href="/leads/export-csv/"
+                                <!-- <a href="/leads/export-csv/"
                                     class="w-full sm:w-auto flex items-center justify-center px-3 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg focus:outline-none hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
                                         stroke="currentColor" stroke-width="2" stroke-linecap="round"
@@ -55,7 +55,7 @@
                                         <line x1="12" x2="12" y1="15" y2="3"></line>
                                     </svg>
                                     Export as CSV
-                                </a>
+                                </a> -->
                             </div>
                         </div>
                     </div>
