--- a/templates/leads/components/lead_items.html
+++ b/templates/leads/components/lead_items.html
@@ -236,7 +236,18 @@
         <h3 class="text-lg font-medium text-gray-800 dark:text-gray-300">No Leads Found</h3>
     </div>
     <div class="mt-2 mb-4 text-sm text-gray-800 dark:text-gray-300">
-        You haven't added any leads yet. Click the button below to add your first lead.
+        You don't have any leads yet. Click the button below to request your first lead.
+    </div>
+    <div class="flex">
+        <button type="button" data-modal-target="requestLeadModal" data-modal-toggle="requestLeadModal"
+            class="text-white bg-green-800 hover:bg-green-900 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-xs px-3 py-1.5 me-2 text-center inline-flex items-center dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">
+            <svg class="me-2 h-3 w-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+                viewBox="0 0 20 14">
+                <path
+                    d="M10 0C4.612 0 0 5.336 0 7c0 1.742 3.546 7 10 7 6.454 0 10-5.258 10-7 0-1.664-4.612-7-10-7Zm0 10a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z" />
+            </svg>
+            Request New Leads
+        </button>
     </div>
 
 </div>
