--- a/templates/dashboard/components/navigation/sidebar.html
+++ b/templates/dashboard/components/navigation/sidebar.html
@@ -114,7 +114,7 @@
 
         </ul>
         <div class="pt-4 mt-4 border-t border-gray-200">
-            <div id="dropdown-cta" class="shadow-sm p-4 mt-6 rounded-lg bg-blue-50 dark:bg-blue-900" role="alert">
+            <!-- <div id="dropdown-cta" class="shadow-sm p-4 mt-6 rounded-lg bg-blue-50 dark:bg-blue-900" role="alert">
                 <div class="flex items-center mb-3">
                     <span
                         class="bg-orange-100 text-orange-800 text-sm font-semibold me-2 px-2.5 py-0.5 rounded-sm dark:bg-orange-200 dark:text-orange-900">Free</span>
@@ -137,7 +137,7 @@
                     Upgrade Now
                 </button>
 
-            </div>
+            </div> -->
             <div id="dropdown-cta-premiums"
                 class="shadow-sm p-4 mt-6 rounded-lg bg-gradient-to-br from-teal-300/30 to-lime-300/30 dark:bg-blue-900"
                 role="alert">
