--- a/templates/marketing/index.html
+++ b/templates/marketing/index.html
@@ -41,7 +41,7 @@
                 onmouseout="this.style.transform='translateY(0)'">
                 <div
                     class="flex justify-center items-center mb-4 w-26 h-26 rounded bg-primary-100  dark:bg-primary-900">
-                    <img src="media/rb_5577.png" alt="phone illustration">
+                    <img src="/media/rb_5577.png" alt="phone illustration">
                 </div>
                 <h3 class="mb-2 text-2xl font-bold dark:text-white">Qualified leads</h3>
                 <p class="font-light text-lg text-gray-500 dark:text-gray-400">Connect with pre-screened buyers and
